== Changes for 0.0.7 for Sep 6, 2005  
* No code changes
* Convert the documentation from kwid to POD to make it more accessible.
Once it's easy to view kwid, it can be changed back.  

== Changes for 0.0.6 for May 2, 2005

* more TODO refactoring
** Removed type for `$todo` parameter on all to all
** Allow :todo<key> to pass key through as our TODO reason 

NOTE: 
The copy of Test::Harness in inc/ has been altered to 
accomidate and print out the new TODO information.

== Changes for 0.0.5 for April 24, 2005

* Changed `skip (Str)` and `skip(Int, Str)` into multi sub
* More force-TODO refactoring
** Added `force_todo()` function which can be used like `t/force_todo` but in the test file
** removed all code for the `t/force_todo` file, we no longer support that
** made all the appropriate test and documentation changes
* Refactoring of todo_* functions
** added `Bool +$todo` named optional param to all non-todo test functions
** made the `$desc` argument into an named optional param as well
** added many tests for these refactored functions
** removed the old todo_* functions completely
** made all test and documentation changes

== Changes for 0.0.4 for April 20, 2005

* Changed the return type for `plan()` from `Int` to `Void`
* Fixed signature for `eval_is` and `todo_eval_is` (`$expected` is now `Str`)
* Some work on `throws_ok` and company ...
** Added a `todo_throws_ok` to go with `throws_ok`
** Moved the smart-match in `throws_ok` to `&ok.goto($! ~~ $match)`
** Added some tests for both functions
* Changed the name and case of several global variables
** `$loop` becomes `$NUM_OF_TESTS_RUN`
** `$failed` becomes `$NUM_OF_TESTS_FAILED`
** `$plan` becomes `$NUM_OF_TESTS_PLANNED`
** `$always_caller` becomes `$ALWAYS_CALLER`
* Refactored force-TODO functionality
** Added file test for `t/force_todo` because it didn't work if the file was not there
** Changed `read_force_todo_tests` to `read_force_todo_file` to be more descriptive